--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <header>
-        <img src="/Users/madjidmehal/Documents/OC-Projet8-Portfolio-main/images/logo/Profil.webp" alt="ma photo">
+        <img src="images/logo/Profil.webp" alt="Photo Profil">
         <nav>
             <a href="#competences" title="Lien vers les compétences" id="nav_competences">Compétences</a>
             <a href="#projets" title="Lien vers les projets" id="nav_projets">Projets</a>
